Header y Menu con HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Plantilla Blog 2</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <h1>DevoCode</h1>
+        </div>
+
+        <nav>
+            <a href="#"></a>
+        </nav>
+    </header>
 </body>
 </html>
