--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
         </div>
 
         <nav>
-            <a href="#"></a>
+            <a href="#">Inicio</a>
+            <a href="#">Blog</a>
+            <a href="#">Contacto</a>
         </nav>
     </header>
+
+    <section class="main">
+        <article>
+            <div class="imagen">
+                <img src="src/img/img1.jpg" alt="">
+            </div>
+
+            <h2>Titulo del Articulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga assumenda aut nemo modi sequi nam quibusdam distinctio dignissimos? Eum, asperiores temporibus perspiciatis nisi impedit in est placeat ipsa. Error, atque.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus quam fugiat natus totam blanditiis nam ducimus, neque reiciendis ut maxime cum, error labore eum eligendi, rerum rem odit culpa. Facilis?</p>
+        </article>
+    </section>
 </body>
 </html>
