--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus quam fugiat natus totam blanditiis nam ducimus, neque reiciendis ut maxime cum, error labore eum eligendi, rerum rem odit culpa. Facilis?</p>
         </article>
     </section>
+    
+    <aside>
+        <div class="ad">
+            <p>ADS</p>
+        </div>
+        
+        <div class="ad">
+            <p>ADS</p>
+        </div>
+    </aside>
 </body>
 </html>
