--- a/index.html
+++ b/index.html
@@ -35,10 +35,21 @@
         <div class="ad">
             <p>ADS</p>
         </div>
-        
+
         <div class="ad">
             <p>ADS</p>
         </div>
     </aside>
+
+    <footer>
+        <div class="autor">
+            <p>DevoCode 2022 - Todos los derechos reservados</p>
+        </div>
+        
+        <div class="redes-sociales">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+        </div>
+    </footer>
 </body>
 </html>
